src/App.css
@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap");
* {
    margin: 0;
}

.App {
    height: 100%;
    width: 100%;
    background-color: hsl(0, 100%, 99%);
    display: flex;
    align-items: center;
    /* font-family: 'Open Sans', sans-serif; */
    /* font-family: 'Montserrat', sans-serif; */
    font-family: "Playfair Display", serif;
    letter-spacing: 1px;
}

.Sidebar {
    width: 130px;
    background-color: #2c2f33;
    display: flex;
    flex-direction: column;
    gap: 20px;
    color: rgba(255, 255, 255, 0.863);
    padding-left: 12px;
    padding-top: 12px;
}

.Sidebar h3:hover {
    cursor: pointer;
    color: lightgreen;
}

.Contactslist {
    width: 90%;
    height: 100%;
}

.ContactslistContainer {
    height: 100%;
    width: 98%;
    display: flex;
    flex-direction: row;
}

.contactContainer {
    display: flex;
    padding: 20px;
    margin: 10px;
    border: 1px solid black;
    border-radius: 5px;
    box-shadow: -6px 6px 4px rgba(0, 0, 0, 0.25);
    transition: 0.2s all;
    overflow: hidden;
}

.contactContainer:hover {
    transform: translateY(-10px);
    box-shadow: -6px 10px 6px rgba(0, 0, 0, 0.25);
    /* opacity: 1; */
}

.imageContainer {
}

.imageContainer img {
    width: 90px;
    height: 90px;
    border-radius: 50%;
}

.contactInfo {
    display: flex;
    width: 88%;
    align-items: center;
    justify-content: space-evenly;
}

.title {
    margin-left: 30px;
}

@media (max-width: 1080px) {
    .Contactslist {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        height: 100%;
        padding-bottom: 20px;
    }
    .contactContainer {
        flex-direction: column;
        justify-content: center;
        align-items: center;
        width: 80%;
        text-align: center;
    }
    .contactInfo {
        width: 100%;
        flex-direction: column;
    }
}

@media (max-width: 800px) {
    .Sidebar {
        padding: 20px;
        padding-top: 35px;
        width: 100px;
    }
    .Sidebar h3 {
        font-size: 17px;
    }

    .contactContainer {
        width: 54vw;
    }
    .contactInfo h2 {
        font-size: 17px;
    }
}

